syntax = "proto3";

import "blockchain.proto";

option java_multiple_files = true;
option java_package = "org.veoow.grpc";

service BootstrapService {
    rpc RegisterNode(NodeInfo) returns (RegisterResponse);
    rpc GetPeerList(Empty) returns (PeerList);
}

message NodeInfo {
    string id = 1;
    string address = 2;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message PeerList {
    repeated NodeInfo peers = 1;
}